# estateSale

./: .gitignore  pyproject.toml  run.py
config/sites/: bidmaxpro.yaml  estatesales.yaml
src/estate_scraper/: cli.py  config.py  images.py  models.py  utils.py
src/estate_scraper/ai/: client.py  ranking.py  valuation.py
src/estate_scraper/reports/: terminal.py
src/estate_scraper/scrapers/: base.py  bidmaxpro.py  estatesales.py
tests/: conftest.py  test_cli.py  test_config.py  test_estatesales.py  test_models.py  test_ranking.py  test_ranking_photos.py  test_scraper.py  test_utils.py
